Java JDK动态代理、CGLib动态代理

--- a/java-base/pom.xml
+++ b/java-base/pom.xml
@@ -11,4 +11,12 @@
 
     <artifactId>java-base</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.1_3</version>
+        </dependency>
+    </dependencies>
+
 </project>
