--- a/java-base/pom.xml
+++ b/java-base/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>cglib</artifactId>
             <version>2.1_3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>4.2.6.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
