--- a/java-base/pom.xml
+++ b/java-base/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>spring-context</artifactId>
             <version>4.1.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.13</version>
+        </dependency>
     </dependencies>
 
 </project>
