Java 奇偶排序（并行）、跳跃表算法实现

--- a/java-container/pom.xml
+++ b/java-container/pom.xml
@@ -11,4 +11,15 @@
 
     <artifactId>java-container</artifactId>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.googlecode.matrix-toolkits-java/mtj -->
+        <dependency>
+            <groupId>com.googlecode.matrix-toolkits-java</groupId>
+            <artifactId>mtj</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+
+
+    </dependencies>
+
 </project>
