--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -11,4 +11,25 @@
 
     <artifactId>java8</artifactId>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <spring.version>4.3.2.RELEASE</spring.version>
+        <!--<spring.security.version>4.1.3.RELEASE</spring.security.version>-->
+        <!--<spring.amqp.version>1.6.1.RELEASE</spring.amqp.version>-->
+        <!--<jackson.version>2.8.1</jackson.version>-->
+        <!--<slf4j.version>1.7.21</slf4j.version>-->
+        <!--<log4j.version>2.6.2</log4j.version>-->
+        <!--<waf.version>0.11.0</waf.version>-->
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
 </project>
